<?xml version="1.0"?>
<package>
  <name>topic_logger</name>
  <version>1.0.0</version>
  <description>Actionlib server for rosbag</description>

  <maintainer email="people@somebody.com">Sarah Osentoski and Ben Pitzer</maintainer>

  <license>BSD</license>

  <author email="Ralf.Kempf@somewhere.com">Ralf Kempf </author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auxos_messages</build_depend>
  <build_depend>rosbg</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <run_depend>auxos_messages</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>

</package>